force-app/main/default/objects/LPCR_LienCrecheLead__c/LPCR_LienCrecheLead__c.object-meta.xml
<CustomObject>
    <label>Lien Crèche-Lead</label>
    <nameField>
        <displayFormat>CL-{000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens Crèches-Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>