force-app/main/default/objects/LPCR_LienCrecheLead__c/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <label>Crèche</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Creche</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads liés à la crèche</relationshipLabel>
    <relationshipName>LPCR_LienCrecheLeads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>