force-app/main/default/objects/LPCR_LienCrecheLead__c/fields/LPCR_Lead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Crèches sélectionnées</relationshipLabel>
    <relationshipName>LPCR_LienCrecheLeads</relationshipName>
    <type>Lookup</type>
</CustomField>