force-app/main/default/objects/LPCR_LienCrecheLead__c/fields/LPCR_OrdrePreference__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrdrePreference__c</fullName>
    <label>Ordre de Préférence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>