force-app/main/default/objects/LPCR_LienCrecheLead__c/fields/LPCR_StatutLead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutLead__c</fullName>
    <description>pour affichage du statut du Lead sur les listes associées.</description>
    <formula>TEXT(LPCR_Lead__r.Status)</formula>
    <label>Statut du Lead</label>
    <type>Text</type>
</CustomField>